--- a/custom_variables.scss
+++ b/custom_variables.scss
@@ -1,1 +1,1 @@
-$icon-font-path:'http://127.1.1.1/t_laravel/public/assets/admin/fonts/';
+$icon-font-path:'http://localhost/laravelAdmin/public/assets/admin/fonts/';
